examples/bad/syntax5.swifty
//semicolon is not allowed in language
var x = 10;
